@@ -1,5 +1,10 @@
 Changes since 0.2:
 
+The new SqlDumper class can dump a database.
+
+Now can insert hex literals into BLOB columns, for example:
+INSERT INTO foo(a) VALUES(x'aa65fe')
+
 Most methods in Database now throw runtime exceptions instead
 of checked exceptions.  If you are of the checked exception
 persuasion, or you have some piece of code which expects 
